--- a/meson.build
+++ b/meson.build
@@ -3306,6 +3306,7 @@ if config_all.has_key('CONFIG_TCG')
   endif
   summary_info += {'TCG plugins': config_host.has_key('CONFIG_PLUGIN')}
   summary_info += {'TCG debug enabled': config_host.has_key('CONFIG_DEBUG_TCG')}
+  summary_info += {'TCG llvm':   config_host.has_key('CONFIG_TCG_LLVM')}
 endif
 summary_info += {'target list':       ' '.join(target_dirs)}
 if have_system
